--- a/HTML & CSS/INF103B_de_Ridder_Bryan/css/practicalinfo.css
+++ b/HTML & CSS/INF103B_de_Ridder_Bryan/css/practicalinfo.css
@@ -6,20 +6,16 @@
     height: 50vh;
 }
 
-/* google maps */
-iframe.googlemaps {
-    width: 100%;
-    height: 400px;
-    border: none;
-}
-
-/* FAQ */
+/* -----------------------------------*/
+/* ------------>>> FAQ <<<------------*/
+/* -----------------------------------*/
 dl {
     text-align: left;
     margin: 60px 9%;
     border-bottom: 1px solid lightgray;
 }
 dt {
+    position: relative;
     box-sizing: border-box;
     border-width: 1px 1px 0 1px;
     border-style: solid;
@@ -50,7 +46,8 @@ dt:hover + dd, dd:hover, dt:hover{
 }
 
 .expand {
-    float: right;
+    position: absolute;
+    right: 0;
 }
 
 /* responsive */
@@ -59,4 +56,14 @@ dt:hover + dd, dd:hover, dt:hover{
     dl {
         margin: 60px 0;
     }
+}
+
+/* -----------------------------------*/
+/* ----------->>> OTHER <<<-----------*/
+/* -----------------------------------*/
+/* google maps */
+iframe.googlemaps {
+    width: 100%;
+    height: 400px;
+    border: none;
 }
