--- a/Javascript/week3/2016_Slides_Opdracht02/style/groet.css
+++ b/Javascript/week3/2016_Slides_Opdracht02/style/groet.css
@@ -1,5 +1,10 @@
 body {
     background-color: #8fbc8f;
+}
+header {
     font-family: Arial, sans-serif;
     font-size: 3em;
+}
+#user {
+    color: red;
 }
